feat: implement manageServer mutation
